--- a/config-wy.json
+++ b/config-wy.json
@@ -31,6 +31,9 @@
 				},
 				"childcare": {
 					"keep": "amenity=childcare"
+				},
+				"recycling": {
+					"keep": "amenity=recycling"
 				}
 			}
 		}
