--- a/config-wy.json
+++ b/config-wy.json
@@ -12,7 +12,7 @@
 					"keep": "amenity=atm"
 				},
 				"bakery": {
-					"keep": "shop=bakery"
+					"keep": "shop=bakery or cuisine=*bakery*"
 				},
 				"bicycle": {
 					"keep": "amenity=bicycle_parking"
@@ -64,7 +64,7 @@
 					"keep": "office=lawyer or office=accountant or office=tax_advisor"
 				},
 				"medical": {
-					"keep": "amenity=clinic or amenity=doctors or amenity=dentist or amenity=pharmacy"
+					"keep": "amenity=clinic or amenity=doctors or amenity=dentist or amenity=pharmacy or healthcare=pharmacy"
 				},
 				"parking": {
 					"keep": "amenity=parking"
@@ -80,7 +80,7 @@
 				},
 				"shop": {
 					"keep": "shop=",
-					"drop": "shop=hairdresser =travel_agency =beauty =clothes =charity =bakery =car =car_parts =car_repair =vacant entrance=main"
+					"drop": "shop=hairdresser =travel_agency =beauty =clothes =charity =bakery =car =car_parts =car_repair =vacant healthcare=pharmacy entrance=main"
 				},
 				"toilets": {
 					"keep": "amenity=toilets toilets=yes",
