Add 200m buffering to Horsforth

--- a/config-wy.json
+++ b/config-wy.json
@@ -6,7 +6,7 @@
 	"areas": {
 		"horsforth": {
 			"name": "Horsforth",
-			"poly": "area-horsforth.poly",
+			"poly": "area-horsforth-buffered.poly",
 			"layers": {
 				"atm": {
 					"keep": "amenity=atm"
