--- a/config-wy.json
+++ b/config-wy.json
@@ -50,6 +50,9 @@
 				"clothing": {
 					"keep": "shop=clothes =shoes"
 				},
+				"community": {
+					"keep": "association=cultural or association=cooperative or association=sport or club="
+				},
 				"education": {
 					"keep": "amenity=school =college =university",
 					"drop": "barrier=gate =bollard entrance=yes"
@@ -67,7 +70,7 @@
 					"keep": "office=lawyer or office=accountant or office=tax_advisor"
 				},
 				"medical": {
-					"keep": "amenity=clinic or amenity=doctors or amenity=dentist or amenity=pharmacy or healthcare=pharmacy"
+					"keep": "amenity=clinic or amenity=doctors or amenity=dentist or amenity=pharmacy or healthcare=pharmacy or emergency=defibrillator"
 				},
 				"parking": {
 					"keep": "amenity=parking"
