--- a/config-wy.json
+++ b/config-wy.json
@@ -91,6 +91,10 @@
 					"keep": "shop=",
 					"drop": "shop=hairdresser =travel_agency =beauty =craft =clothes =charity =bakery =car =car_parts =car_repair =deli =vacant healthcare=pharmacy entrance=main"
 				},
+				"sport": {
+					"keep": "sport= and name=",
+					"drop": "leisure=fitness_centre"
+				},
 				"toilets": {
 					"keep": "amenity=toilets toilets=yes",
 					"drop": "entrance=main =yes"
