--- a/config-wy.json
+++ b/config-wy.json
@@ -89,7 +89,7 @@
 				},
 				"shop": {
 					"keep": "shop=",
-					"drop": "shop=hairdresser =travel_agency =beauty =craft =clothes =charity =bakery =car =car_parts =car_repair =deli =vacant healthcare=pharmacy entrance=main"
+					"drop": "shop=hairdresser =travel_agency =beauty =craft =clothes =charity =bakery =car =car_parts =car_repair =deli =vacant =ticket healthcare=pharmacy entrance=main"
 				},
 				"sport": {
 					"keep": "sport= and name=",
